jsonrpc-types/src/snapshots/jsonrpc_types__tests__notification_serde-2.snap
---
source: jsonrpc-types/src/lib.rs
expression: "Notification::new(\"method\", vec![0, 1])"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": [
    0,
    1
  ]
}
