jsonrpc-types/src/snapshots/jsonrpc_types__tests__notification_serde-3.snap
---
source: jsonrpc-types/src/lib.rs
expression: "Notification::new(\"method\", Params { p0: 0, p1: 1 })"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": {
    "p0": 0,
    "p1": 1
  }
}
