jsonrpc-types/src/snapshots/jsonrpc_types__tests__notification_serde.snap
---
source: jsonrpc-types/src/lib.rs
expression: "Notification::new(\"method\", ())"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": null
}
