jsonrpc-types/src/snapshots/jsonrpc_types__tests__request_serde-2.snap
---
source: jsonrpc-types/src/lib.rs
expression: "Request::new(\"method\", (), Some(1))"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": null,
  "id": 1
}
