jsonrpc-types/src/snapshots/jsonrpc_types__tests__request_serde-6.snap
---
source: jsonrpc-types/src/lib.rs
expression: "Request::new(\"method\", Params { p0: 0, p1: 1 }, Some(1))"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": {
    "p0": 0,
    "p1": 1
  },
  "id": 1
}
