jsonrpc-types/src/snapshots/jsonrpc_types__tests__request_serde.snap
---
source: jsonrpc-types/src/lib.rs
expression: "Request::new(\"method\", (), None)"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": null,
  "id": null
}
